fixed overflow bug

--- a/src/components/Notes.module.css
+++ b/src/components/Notes.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: min(95vw, 800px);
+  max-width: 800px;
   margin: 0 auto;
   margin-top: 10vh;
 }
